--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,10 +24,8 @@ jobs:
                 key: npm-deps-${{ hashFiles('**/package-lock.json')}}
             - name: Install dependencies
               run: npm ci
-            - name: Run server
-              run: npm start & npx wait-on http://127.0.0.1:$PORT
-            - name: Run tests
-              run: npm test
+            - name: Run server and tests
+              run: npx start-server-and-test "npm start" http://127.0.0.1:$PORT "npm test"
             - name: Output information
               run: |
                 echo "Username: ${{ env.MONGODB_USERNAME }}"
