--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "npx playwright test"
+    "start": "node server.js",
+    "test": "playwright test --reporter=line"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
