--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,7 +25,7 @@ jobs:
             - name: Install dependencies
               run: npm ci
             - name: Run server and tests
-              run: npx start-server-and-test npm start http://localhost:$PORT npm test
+              run: npx start-server-and-test -- npm start http://localhost:$PORT npm test
             - name: Output information
               run: |
                 echo "Username: ${{ env.MONGODB_USERNAME }}"
