--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,8 +24,8 @@ jobs:
                 key: npm-deps-${{ hashFiles('**/package-lock.json')}}
             - name: Install dependencies
               run: npm ci
-            - name: Run server and tests
-              run: npx start-server-and-test -- npm start http://localhost:$PORT npm test
+            - name: Run server
+              run: npm start http://localhost:$PORT
             - name: Output information
               run: |
                 echo "Username: ${{ env.MONGODB_USERNAME }}"
