--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,7 +25,9 @@ jobs:
             - name: Install dependencies
               run: npm ci
             - name: Run server
-              run: npm start http://localhost:$PORT
+              run: |
+                  npm start &
+                  npx wait-on http://localhost:$PORT
             - name: Output information
               run: |
                 echo "Username: ${{ env.MONGODB_USERNAME }}"
