--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,8 +26,8 @@ jobs:
               run: npm ci
             - name: Run server
               run: |
-                  npm start &
-                  npx wait-on http://localhost:$PORT
+                nohup npm start > server.log 2>&1 &
+                sleep 5
             - name: Output information
               run: |
                 echo "Username: ${{ env.MONGODB_USERNAME }}"
